--- a/xwiki-platform-core/xwiki-platform-webdav/xwiki-platform-webdav-test/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-webdav/xwiki-platform-webdav-test/pom.xml
@@ -27,20 +27,17 @@
     <artifactId>xwiki-platform-webdav</artifactId>
     <version>8.0-SNAPSHOT</version>
   </parent>
-  <artifactId>xwiki-platform-webdav-ui</artifactId>
-  <packaging>xar</packaging>
-  <name>XWiki Platform - WebDAV - UI</name>
-  <description>Holds utility functions required for WebDAV UI integration.</description>
+  <artifactId>xwiki-platform-webdav-test</artifactId>
+  <name>XWiki Platform - WebDAV - Tests - Parent POM</name>
+  <packaging>pom</packaging>
+  <description>XWiki Platform - WebDAV - Tests - Parent POM</description>
   <properties>
     <!-- Don't run CLIRR here since there's no Java code. -->
     <xwiki.clirr.skip>true</xwiki.clirr.skip>
+    <!-- Don't run Checkstyle in test modules -->
+    <xwiki.checkstyle.skip>true</xwiki.checkstyle.skip>
   </properties>
-  <dependencies>
-    <dependency>
-      <groupId>org.xwiki.platform</groupId>
-      <artifactId>xwiki-platform-webdav-server</artifactId>
-      <version>${project.version}</version>
-      <scope>runtime</scope>
-    </dependency>
-  </dependencies>
+  <modules>
+    <module>xwiki-platform-webdav-test-tests</module>
+  </modules>
 </project>
