XWIKI-12757: Display a more user-friendly success message for Rename * Add a renameStatus.vm template that shows a summary of the rename request that has been executed and the rename log (for advanced users) after the rename operation is finished (this template will be used later to display the rename progress). * Remove from the refactoring script service the methods used to retrieve the job status as they were not working and there is a better alternative: the generic job script service. * Extract from extension.js the code that makes the extension log collapsible and auto-scroll to the end (while the job is runnning) and move it to logging.js in order to be reusable. * Modify extension history to use logging.js for collapsible/auto-scroll log. * Add a configuration option to the #hierarchy macro to be able to show the last breadcrumb element as non-active (i.e. with link) * Apply code style to rename.vm and modify it to support renameStatus.vm
(cherry picked from commit 84e4e958d1ea8428f08879f130241a50a0a55f19)

--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -594,6 +594,37 @@
               <method>void ajc$interFieldInit$com_xpn_xwiki_XWikiContextCompatibilityAspect$com_xpn_xwiki_XWikiContext$xmlRpcServer(com.xpn.xwiki.XWikiContext)</method>
               <justification>Impossible to implement it without dependeing on XMLRPC module</justification>
             </difference>
+
+            <difference>
+              <differenceType>7002</differenceType>
+              <className>org/xwiki/refactoring/script/RefactoringScriptService</className>
+              <method>org.xwiki.refactoring.job.EntityJobStatus getCopyAsJobStatus(java.lang.String)</method>
+              <justification>We can get the job status in a generic way using the job script service. This method is part of an unstable (young) API and it wasn't working anyway, as it was throwing a ClassCastException.</justification>
+            </difference>
+            <difference>
+              <differenceType>7002</differenceType>
+              <className>org/xwiki/refactoring/script/RefactoringScriptService</className>
+              <method>org.xwiki.refactoring.job.EntityJobStatus getCopyJobStatus(java.lang.String)</method>
+              <justification>We can get the job status in a generic way using the job script service. This method is part of an unstable (young) API and it wasn't working anyway, as it was throwing a ClassCastException.</justification>
+            </difference>
+            <difference>
+              <differenceType>7002</differenceType>
+              <className>org/xwiki/refactoring/script/RefactoringScriptService</className>
+              <method>org.xwiki.refactoring.job.EntityJobStatus getDeleteJobStatus(java.lang.String)</method>
+              <justification>We can get the job status in a generic way using the job script service. This method is part of an unstable (young) API and it wasn't working anyway, as it was throwing a ClassCastException.</justification>
+            </difference>
+            <difference>
+              <differenceType>7002</differenceType>
+              <className>org/xwiki/refactoring/script/RefactoringScriptService</className>
+              <method>org.xwiki.refactoring.job.EntityJobStatus getMoveJobStatus(java.lang.String)</method>
+              <justification>We can get the job status in a generic way using the job script service. This method is part of an unstable (young) API and it wasn't working anyway, as it was throwing a ClassCastException.</justification>
+            </difference>
+            <difference>
+              <differenceType>7002</differenceType>
+              <className>org/xwiki/refactoring/script/RefactoringScriptService</className>
+              <method>org.xwiki.refactoring.job.EntityJobStatus getRenameJobStatus(java.lang.String)</method>
+              <justification>We can get the job status in a generic way using the job script service. This method is part of an unstable (young) API and it wasn't working anyway, as it was throwing a ClassCastException.</justification>
+            </difference>
           </ignored>
           <excludes>
             <exclude>**/internal/**</exclude>
