--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -751,10 +751,12 @@ core.rename.title = Rename <a href="{1}">{0}</a>
 core.rename.source.label=Source
 core.rename.source.hint=The page that is going to be renamed
 core.rename.children.label=Affect {0}{1} {1,choice,0#children|1#child|1<children}{2}
+core.rename.children.labelWithoutParams=Affect the child pages
 core.rename.children.hint=Preserve the child pages by updating their path and moving them to the new location
 core.rename.links.label=Update {0}{1} {1,choice,0#links|1#link|1<links} to this page{2}
+core.rename.links.labelWithoutParams=Update the wiki links
 core.rename.links.hint=Modify the wiki links to the source page to target the new page
-core.rename.autoRedirect.label=Redirect to the new page
+core.rename.autoRedirect.label=Create an automatic redirect
 core.rename.autoRedirect.hint=Redirect the user to the new page when accessing the old page. Select this option if you don't want to break external links to the old page.
 core.rename.target.title.label=New Title
 core.rename.target.title.hint=The new page title
@@ -769,11 +771,16 @@ core.rename.target.name.hint=The new page name
 core.rename.target.terminal.label=Rename as terminal page
 core.rename.target.terminal.hint=This type of page cannot have children and is generally used in applications, development or in older versions of XWiki.
 core.rename.submit=Rename
-core.rename.success=Successfully renamed page {0} in space {3} to page <a href="{2}">{1}</a> in space {4}
 core.rename.emptyName=Please enter a valid page name!
 core.rename.alreadyExists=A page with the given name (<a href="{1}">{0}</a>) already exists. Please provide a different name.
 core.rename.nonexistingDocument=This page does not exist.
 core.rename.targetNotWritable=You don't have the right to create the target page.
+core.rename.status.label=Rename Status
+core.rename.status.hint=The following rename operation has been started by {0} on {1}
+core.rename.status.success=Done.
+core.rename.status.failure=Rename failed.
+core.rename.status.notFound=The requested rename status could not be found.
+job.log.label.refactoring/rename=Rename log
 rename=Rename
 
 ### Copy
@@ -4931,6 +4938,12 @@ search.page.results.delete=Delete
 search.page.results.rename=Rename
 search.page.results.rights=Rights
 search.page.results.guest=Guest
+
+#######################################
+## until 7.4RC1
+#######################################
+
+core.rename.success=Successfully renamed page {0} in space {3} to page <a href="{2}">{1}</a> in space {4}
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
