XWIKI-12913 : %20 displayed in revision comment when hiding / making visible a Blog post * removed %20 from translations * replaced hardcoded messages with translation keys * added new needed translation keys * improved the way of creating show/hide URLs

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2375,10 +2375,12 @@ xe.blog.code.notblog=This is not a blog page!
 xe.blog.code.published=This blog post is not published yet.
 xe.blog.code.hidden=This blog post is hidden.
 xe.blog.code.notpublished=This blog post is not published yet. Publish it.
-xe.blog.code.madevisible=Made%20entry%20visible
-xe.blog.code.hid=Hidden%20entry
+xe.blog.code.madevisible=Made entry visible
+xe.blog.code.hid=Hidden entry
 xe.blog.code.makevisible=This blog post is not visible to other users. Make it visible.
 xe.blog.code.hide=Hide this blog post from other users.
+xe.blog.code.loading=Loading...
+xe.blog.code.failedToChangeBlogPostVisibility=Failed to change blog post visibility.
 xe.blog.code.editpost=Edit this blog post
 xe.blog.code.deletepost=Delete this blog post
 xe.blog.code.readpost=Read the full entry
@@ -2443,6 +2445,7 @@ xe.blog.manageCategories.js.add.inProgress=Adding category...
 xe.blog.manageCategories.js.add.error.401=You have been logged out, please refresh and log in
 xe.blog.manageCategories.js.add.error.403=You are not allowed to create the target page
 xe.blog.manageCategories.js.add.error.409=Target page already exists, please choose a different name
+xe.blog.manageCategories.js.add.categoryAlreadyExists=This category already exists.
 xe.blog.manageCategories.js.delete.confirm=Are you sure you want to delete this category? This action is not reversible.
 xe.blog.manageCategories.js.delete.inProgress=Deleting category...
 xe.blog.manageCategories.js.delete.done=Deleted
