XWIKI-12838: Perform the page copy and rename asynchronously * Split the code from copy.vm (Flamingo) in multiple Velocity macros * The Rename Page UI duplicates the 'mainContentArea' DIV * Move the progress bar CSS rules from extension.css to job.css so that they can be reused more easily * Add job.js to handle the update of a running job's progress and log in a generic way * Modify logging_macros.vm (and logging.css) to put the actual 'log-item-${level}' CSS class even when the log item is 'loading' * Move generic Velocity macros from renameStatus.vm to refactoringStatus_macros.vm

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -785,7 +785,6 @@ rename=Rename
 
 ### Copy
 core.copy.title=Copy <a href="{1}">{0}</a>
-core.copy.copyingdoc=Page {0} successfully copied to {1}
 core.copy.source.label=Source
 core.copy.source.hint=The page that is going to be copied
 core.copy.target.title.label=Copy Title
@@ -808,6 +807,10 @@ core.copy.submit=Copy
 core.copy.cancel=Cancel
 core.copy.alreadyExists=The page {0} already exists. Are you sure you want to overwrite it (all its content would be lost)?
 core.copy.changeTarget=Change the target page
+core.copy.status.label=Copy Status
+core.copy.status.hint=The following copy operation has been started by {0} on {1}
+core.copy.status.notFound=The requested copy status could not be found.
+job.log.label.refactoring/copyAs=Copy log
 
 ### Document Picker
 core.documentPicker.title=Select Page
@@ -4940,10 +4943,11 @@ search.page.results.rights=Rights
 search.page.results.guest=Guest
 
 #######################################
-## until 7.4RC1
+## until 7.4
 #######################################
 
 core.rename.success=Successfully renamed page {0} in space {3} to page <a href="{2}">{1}</a> in space {4}
+core.copy.copyingdoc=Page {0} successfully copied to {1}
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
