XWIKI-12974 : Fix translations in Blog Application
(cherry picked from commit 7ec313fd6c664dc18b42d33ee22244987c3028e7)

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -2405,6 +2405,7 @@ xe.blog.code.description.category=Most recent blog posts in the {0} category
 xe.blog.code.description.space=Most recent blog posts in the {0} space
 xe.blog.code.description.wiki=Most recent blog posts in the wiki
 xe.blog.code.title=Blog
+xe.blog.code.warning=Warning:
 xe.blog.sheet.notpost=This is not a blog post!
 xe.blog.sheet.category=Category:
 xe.blog.sheet.summary=Summary (optional):
@@ -2438,8 +2439,11 @@ xe.blog.categories.noentries=No entries in this category
 xe.blog.manageCategories.title=Manage blog categories
 xe.blog.manageCategories.create.error.emptyName=Please enter a valid category name
 xe.blog.manageCategories.create.error.alreadyExists=Target page already exists, please choose a different name
+xe.blog.manageCategories.create.error.notExists=The requested page could not be found.
+xe.blog.manageCategories.create.error.targetNotWritable=You don't have the right to create the target page.
 xe.blog.manageCategories.rename.error.emptyName=Please enter a valid category name
 xe.blog.manageCategories.js.fetchingForm=Fetching form...
+xe.blog.manageCategories.js.error.noServer=Server not responding
 xe.blog.manageCategories.js.rename.inProgress=Renaming category...
 xe.blog.manageCategories.js.rename.error.403=You are not allowed to create the target page
 xe.blog.manageCategories.js.rename.error.404=Invalid category, please refresh the page to update the category tree
@@ -2448,7 +2452,6 @@ xe.blog.manageCategories.js.add.inProgress=Adding category...
 xe.blog.manageCategories.js.add.error.401=You have been logged out, please refresh and log in
 xe.blog.manageCategories.js.add.error.403=You are not allowed to create the target page
 xe.blog.manageCategories.js.add.error.409=Target page already exists, please choose a different name
-xe.blog.manageCategories.js.add.categoryAlreadyExists=This category already exists.
 xe.blog.manageCategories.js.delete.confirm=Are you sure you want to delete this category? This action is not reversible.
 xe.blog.manageCategories.js.delete.inProgress=Deleting category...
 xe.blog.manageCategories.js.delete.done=Deleted
