[Misc] Added missing EM name

--- a/xwiki-platform-core/xwiki-platform-statistics/xwiki-platform-statistics-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-statistics/xwiki-platform-statistics-ui/pom.xml
@@ -33,7 +33,8 @@
   <properties>
     <!-- Don't run CLIRR here since there's no Java code. -->
     <xwiki.clirr.skip>true</xwiki.clirr.skip>
-
+    <!-- Name to display by the Extension Manager -->
+    <xwiki.extension.name>Statistics Application</xwiki.extension.name>
     <!-- Old names of this module used for retro compatibility when resolving dependencies of old extensions -->
     <xwiki.extension.features>org.xwiki.platform:xwiki-platform-statistics</xwiki.extension.features>
   </properties>
