--- a/xwiki-platform-core/xwiki-platform-vfs/xwiki-platform-vfs-api/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-vfs/xwiki-platform-vfs-api/pom.xml
@@ -41,7 +41,7 @@
          This is because is contributes a new URL Resource Handler and those need to be installed in the
          root Component Manager (since they're executed before the wiki is extracted from the URL during
          the URL parsing process). -->
-    <xwiki.extension.namespaces>&lt;root&gt;</xwiki.extension.namespaces>
+    <xwiki.extension.namespaces>{root}</xwiki.extension.namespaces>
   </properties>
   <dependencies>
     <dependency>
